# readwell

./: .gitignore  README.md  Status.md
backend/services/content_gateway/: .env.example  pyproject.toml
backend/services/content_gateway/content_gateway/: config.py  local_store.py  main.py
backend/services/content_gateway/content_gateway/routers/: books.py
backend/services/content_gateway/tests/: test_local_store.py
backend/services/document_converter/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/services/document_converter/document_converter/: __init__.py  config.py  converter.py  db.py  main.py  storage.py  worker.py
backend/services/document_converter/document_converter/output/: package_builder.py
backend/services/document_converter/document_converter/parsers/: epub_parser.py
backend/services/document_converter/document_converter/processors/: asset_manager.py  block_builder.py  content_segmenter.py
backend/services/document_converter/document_converter/utils/: logger.py
backend/services/document_converter/document_converter/validation/: validator.py
backend/services/document_converter/tests/: test_block_builder.py  test_epub_parser.py  test_segmenter.py  test_validator.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: gateway.ts
frontend/src/components/: BlockRenderer.tsx  BookCard.tsx  (+7 more)
specs/: AWSDeployment.md  DocumentConversionService.md  Phase1-MVP.md  Project.md  Proposal.md  ReadBook.md  UIDesign.md  VoiceCommands.md
(+14 files in other folders)
