[project]
name = "content-gateway"
version = "0.1.0"
description = "Content Gateway API for Readwell — serves book catalog and page data"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["content_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
